# corescpy

./: .gitignore  =2.0.0  Inflamed-50452B_res0pt5_dist0pt5_npc50_markers.csv  Inflamed-50452B_res0pt75_dist0pt3_npc50_markers.csv  Inflamed-50452B_res1pt5_dist0_npc50_markers.csv  README.md  build.sh  c.ipynb  environment_conda.yml  environment_old.yml  pyproject.toml  setup.py  spatial_tuq97n.ipynb
.github/workflows/: python-app.yml
corescpy/: .wolf104902fomlJ8OvFmB.py  .wolf104904JiYnjv4lIJw.py  .wolf104905DmediaWNXZ7.py  .wolf104907tDQiy7i4sOs.py  .wolf10490BVzMpJLyit09.py  .wolf10490CUfJv3iS9vdX.py  .wolf10490JnLYXfJFwPhG.py  .wolf10490N6CpsB7Tgt37.py  .wolf10490NhN9xRYtAZId.py  .wolf10490YAasinTaUzyE.py  .wolf10490Z8pELTeYhpaD.py  .wolf10490acsPKLLTOe2d.py  .wolf10490dCFG8eQpRcDd.py  .wolf10490jcXR9uazajvu.py  .wolf10490kNgoIT8iLW39.py  .wolf10490oijTeXASdR5V.py  .wolf10490pt2qjWWJ1CJw.py  .wolf10490r0rDxfXg6YFA.py  .wolf10490tbv1uEdxOVfI.py  .wolf10490yVM5tXn4WR2c.py  .wolf10490z4mRvCXq5NgE.py  __init__.py  class_crispr.py  class_sc.py  class_spatial.py  constants.py  defaults.py
corescpy/analysis/: __init__.py  clustering.py  communication.py  composition.py  perturbations.py  quantification.py
corescpy/processing/: .wolf10490WyZzCZo5XMik.py  .wolf10490bZ0VZBm8o8gR.py  .wolf10490hKFTDOnEe6Tu.py  .wolf10490q7kh95SdTq5X.py  __init__.py  constants.py  guide_rna.py  importing.py  preprocessing.py  spatial_pp.py
corescpy/utils/: __init__.py  argument_manipulation.py  data_manipulation.py  display.py  math.py  resources.py
corescpy/visualization/: __init__.py  basic_plots.py  communication_plots.py  gene_expression_plots.py  perturbation_plots.py  sc_pp_plots.py  spatial_plots.py
crispr/: __init__.py  class_crispr.py  class_sc.py  class_spatial.py  crispr_class.py  defaults.py  develop.code-workspace
crispr/analysis/: __init__.py  clustering.py  communication.py  composition.py  perturbations.py  rna.py
crispr/processing/: __init__.py  guide_rna.py  importing.py  preprocessing.py  spatial_data.py  spatial_pp.py
crispr/utils/: __init__.py  argument_manipulation.py  data_manipulation.py  display.py  math.py  resources.py
crispr/visualization/: __init__.py  basic_plots.py  communication_plots.py  gene_expression_plots.py  perturbation_plots  perturbation_plots.py  sc_pp_plots.py
examples/: annotation_guide.xlsx  assign_guide_RNA.ipynb  augur.ipynb  cite-seq.ipynb  composition_analysis.ipynb  composition_analysis_example.ipynb  config.py  create_object.py  crispr.code-workspace  crispr_integration.ipynb  crispr_object.ipynb  crispr_preprocessing.ipynb  crispr_preprocessing_integration.ipynb  crispri_perturb_seq_integration.ipynb  distance_measures.ipynb  guide_annotation.ipynb  markers_lineages.csv  minimal_workflow.ipynb  mixscape copy.ipynb  mixscape.ipynb  multicellular_programs.ipynb  perturb-seq.ipynb  perturb_10x.ipynb  perturb_crispri.ipynb  process_grna.ipynb  progress.xlsx  senmayo_ileal.ipynb  simple_object_load.ipynb  single_cell.ipynb  single_cell_integration.ipynb  spatial.ipynb  spatial_10x.ipynb  spatial_10x_xenium.ipynb  spatial_simple_object_load.ipynb  spatial_tuq97n copy.ipynb  spatial_tuq97n.ipynb  spatial_tuq97n_subclustering.ipynb  spatial_visium.ipynb  spatial_xenium.ipynb  spatial_xenium_cho copy 2.ipynb  (+19 more)
examples/archive/: augur.ipynb  class_crispr.py  composition_analysis.ipynb  distance_measures.ipynb  pbmc3k.ipynb  perturb-seq.ipynb  process_grna.ipynb
tests/: __init__.py  test_composition_analysis  test_perturbations.py  test_preprocessing.py  test_processing.py  test_spatial.py
