[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "crispr"
version = "0.0.1"
description = "CRISPR analysis (standardized workflow)."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Elizabeth Aslinger"}
]
maintainers = [
    {name = "Elizabeth Aslinger", email = "elizabeth.aslinger@aya.yale.edu"},
]
urls.Documentation = "https://github.com/easlinger/crispr/README.md"
urls.Source = "https://github.com/easlinger/crispr"
urls.Home-page = "https://github.com/easlinger/crispr"
dependencies = [
    "anndata",
    "scanpy[leiden]",
    "muon",
    "pertpy",
    "harmonypy",
    "squidpy",
    "pydeseq2",
    "liana >= 1.0.4",
    "corneto",
    "graphviz",
    "cvxpy",
    "cylp",
    # "pydeseq2,
    "arviz",
    "celltypist",
    "numpy >= 1.24.4",
    "seaborn >= 0.13.0",
    "ete3",
    "scipy",
    "rich",
    "requests",
    "ipywidgets",
    "switchlang",
    "scikit-misc",
    "plotnine",
    "scvi-tools",
    "adjusttext",
    "toytree",
    "numpyro",
    "statannotations",
    "decoupler",
    "ott-jax",
    "sparsecca",
    "numba",
    "remotezip",
    "openpyxl"
]

[project.optional-dependencies]
coda = [
    "ete3",
    "pyqt5"
]
dev = [
    "pre-commit",
]
doc = [
    "docutils>=0.8,!=0.18.*,!=0.19.*",
    "sphinx>=4",
    "furo",
    "myst-nb",
    "myst-parser",
    "sphinxcontrib-bibtex>=1.0.0",
    "sphinx-gallery",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-remove-toctrees",
    "sphinx-design",
    "sphinx-last-updated-by-git",
    "sphinx-automodapi",
    "sphinxext-opengraph",
    "pygments",
    "pyenchant",
    "nbsphinx",
    "nbsphinx-link",
    "ipykernel",
    "ipython",
]
test = [
    "pytest",
    "pytest-cov",
]

# [tool.dependencies]
# pydeseq2 = {path = "../pydeseq2"}

[tool.hatch.version]
source = "vcs"

[tool.coverage.run]
source = ["crispr"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = "crispr/tests"
xfail_strict = true
addopts = [
    "--import-mode=importlib",  # allow using test files with same name
]
markers = [
    "conda: marks a subset of tests to be ran on the Bioconda CI.",
    "extra: marks tests that require extra dependencies."
]
minversion = 6.0
norecursedirs = [ '.*', 'build', 'dist', '*.egg', 'data', '__pycache__']

[tool.black]
line-length = 120

[tool.ruff]
src = ["src"]
line-length = 120
select = [
    "F",  # Errors detected by Pyflakes
    "E",  # Error detected by Pycodestyle
    "W",  # Warning detected by Pycodestyle
    "I",  # isort
    #"D",  # pydocstyle
    "B",  # flake8-bugbear
    "TID",  # flake8-tidy-imports
    "C4",  # flake8-comprehensions
    "BLE",  # flake8-blind-except
    "UP",  # pyupgrade
    "RUF100",  # Report unused noqa directives
]
ignore = [
    # line too long -> we accept long comment lines; black gets rid of long code lines
    "E501",
    # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
    "E731",
    # Missing docstring in __init__
    "D107",
    # first line should end with a period [Bug: doesn't work with single-line docstrings]
    "D400",
    # First line should be in imperative mood; try rephrasing
    # "D401",
    ## Disable one in each pair of mutually incompatible rules
    # We don’t want a blank line before a class docstring
    "D203"
]