[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "corescpy"
version = "0.0.1"
description = "CRISPR analysis (standardized workflow)."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Elizabeth Aslinger"}
]
maintainers = [
    {name = "Elizabeth Aslinger", email = "elizabeth.aslinger@aya.yale.edu"},
]
urls.Documentation = "https://github.com/easlinger/corescpy/README.md"
urls.Source = "https://github.com/easlinger/corescpy"
urls.Home-page = "https://github.com/easlinger/corescpy"
dependencies = [
    # Base
    "anndata",
    "scanpy[leiden]",
    "muon",
    "celltypist",
    "requests",

    # GSEA
    "blitzgsea",

    # Perturbations/Conditions
    "pertpy>=0.6.0",
    "ete3",
    "PyQt5",
    "harmonypy",
    "pydeseq2",
    "decoupler",
    "liana>=1.0.4",
    "corneto",
    "graphviz",
    "cvxpy",
    "cylp",
    "arviz",

    # Spatial
    "squidpy",
    "spatialdata>=0.0.15",
    "spatialdata_io>=0.0.9",
    "spatialdata-plot",
    "tifffile",
    "cellpose",
    "napari[pyqt5]; platform_system != 'Windows'",
    "napari[pyside2]; platform_system == 'Windows'",

    # Other
    "docutils < 0.17,>= 0.10",
    # "numpy >=1.24.4",
    "numpy<=1.24.3,>=1.22",
    "jax==0.4.20",
    "jaxlib==0.4.20",
    "optax==0.1.7",
    # "chex==0.1.7",
    "seaborn>=0.13.0",
    "typing-extensions>=4.8.0",
    "scipy",
    "rich",
    "requests",
    "ipywidgets",
    "switchlang",
    "scikit-misc",
    "plotnine",
    "scvi-tools",
    "adjusttext",
    "toytree",
    "numpyro",
    "statannotations",
    "ott-jax",
    "sparsecca",
    "numba",
    "remotezip",
    "openpyxl"
]

[project.optional-dependencies]
coda = [
    "ete3",
    "pyqt5"
]
dev = [
    "pre-commit",
]
doc = [
    "docutils>=0.8,!=0.18.*,!=0.19.*",
    "sphinx>=4",
    "furo",
    "myst-nb",
    "myst-parser",
    "sphinxcontrib-bibtex>=1.0.0",
    "sphinx-gallery",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-remove-toctrees",
    "sphinx-design",
    "sphinx-last-updated-by-git",
    "sphinx-automodapi",
    "sphinxext-opengraph",
    "pygments",
    "pyenchant",
    "nbsphinx",
    "nbsphinx-link",
    "ipykernel",
    "ipython",
]
test = [
    "pytest",
    "pytest-cov",
]

# [tool.dependencies]
# pydeseq2 = {path = "../pydeseq2"}

[tool.hatch.version]
source = "vcs"

[tool.coverage.run]
source = ["corescpy"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = "corescpy/tests"
xfail_strict = true
addopts = [
    "--import-mode=importlib",  # allow using test files with same name
]
markers = [
    "conda: marks a subset of tests to be ran on the Bioconda CI.",
    "extra: marks tests that require extra dependencies."
]
minversion = 6.0
norecursedirs = [ '.*', 'build', 'dist', '*.egg', 'data', '__pycache__']

[tool.black]
line-length = 120

[tool.ruff]
src = ["src"]
line-length = 120
select = [
    "F",  # Errors detected by Pyflakes
    "E",  # Error detected by Pycodestyle
    "W",  # Warning detected by Pycodestyle
    "I",  # isort
    #"D",  # pydocstyle
    "B",  # flake8-bugbear
    "TID",  # flake8-tidy-imports
    "C4",  # flake8-comprehensions
    "BLE",  # flake8-blind-except
    "UP",  # pyupgrade
    "RUF100",  # Report unused noqa directives
]
ignore = [
    # line too long -> we accept long comment lines; black gets rid of long code lines
    "E501",
    # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
    "E731",
    # Missing docstring in __init__
    "D107",
    # first line should end with a period [Bug: doesn't work with single-line docstrings]
    "D400",
    # First line should be in imperative mood; try rephrasing
    # "D401",
    ## Disable one in each pair of mutually incompatible rules
    # We don’t want a blank line before a class docstring
    "D203"
]
